--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: ''
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: 
+lang: 'en'
 
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
@@ -21,7 +21,7 @@ timezone: Asia/Seoul
 
 title: haecheol-shin                          # the main title
 
-tagline: 백엔드 개발 공부 블로그   # it will display as the sub-title
+tagline: Life is a desire, not a meaning.   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
